logs/convertish.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/convertish'...
Compiling './lib/python3.5/site-packages/convertish/convert.py'...
***   File "./lib/python3.5/site-packages/convertish/convert.py", line 197
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/convertish/tests'...
Compiling './lib/python3.5/site-packages/convertish/tests/test_basic.py'...
***   File "./lib/python3.5/site-packages/convertish/tests/test_basic.py", line 21
    (1L,'1'),
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/convertish/tests/test_json.py'...
***   File "./lib/python3.5/site-packages/convertish/tests/test_json.py", line 16
    (1L,1),
      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/convertish-0.5.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/schemaish'...
Compiling './lib/python3.5/site-packages/schemaish/attr.py'...
***   File "./lib/python3.5/site-packages/schemaish/attr.py", line 90
    except validatish.Invalid, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/schemaish/tests'...
Compiling './lib/python3.5/site-packages/schemaish/tests/test_attr.py'...
***   File "./lib/python3.5/site-packages/schemaish/tests/test_attr.py", line 158
    except Invalid, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/schemaish-0.5.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplegeneric-0.8.1.dist-info'...
Listing './lib/python3.5/site-packages/validatish'...
Listing './lib/python3.5/site-packages/validatish/tests'...
Compiling './lib/python3.5/site-packages/validatish/tests/test_basic.py'...
***   File "./lib/python3.5/site-packages/validatish/tests/test_basic.py", line 20
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/validatish/validator.py'...
***   File "./lib/python3.5/site-packages/validatish/validator.py", line 40
    except Invalid, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/validatish-0.6.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
